Al fin las imagenes se ajustan bien

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">ChargerImagenButton</string>
     <string name="click_to_load">Cargar imagen</string>
+    <string name="chargerror">Error cargando la imagen</string>
+    <string name="loading">Cargando&#8230;</string>
 </resources>
