--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name" translatable="false">ChargerImagenButton</string>
     <string name="click_to_load">Click to load</string>
     <string name="chargerror">Error loading image</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading&#8230;</string>
 </resources>
